# verimem

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
benchmarks/: BENCHMARKS.md  HYBRID_MODE.md  README.md  VERIMEM_BENCHMARKS.md  _smoke_hybrid_rrf_bge_v2.jsonl  _smoke_rerank_bge_v2.jsonl  aggregate_longmemeval_jsonl.py  convomem_bench.py  convomem_qa_bench.py  convomem_qa_groq_bench.py  convomem_results.md  groq_bench_core.py  hindsight_smoke.py  listwise_rerank.py  locomo_bench.py  longmemeval_bench.py  longmemeval_qa_groq_bench.py  longmemeval_qa_hindsight_groq_bench.py  membench_bench.py  memory_perf_bench.py  nli_sequential_vs_batch_latency.py  recall_perf_bench.py  recall_sync_contradictions_latency.py  results_convomem_hybrid_rerank_top10_20260409_1644.json  results_convomem_hybrid_rrf_bge_v2_top10_20260409_2140.json  results_convomem_hybrid_rrf_top10_20260409_2046.json  results_convomem_hybrid_rrf_top10_20260409_2050.json  results_convomem_hybrid_rrf_top10_20260409_2231.json  results_convomem_hybrid_top10_20260409_1621.json  results_convomem_hybrid_top10_20260409_2047.json  results_convomem_qa_claude_20260410_2241.json  results_convomem_qa_groq_20260410_2351.json  results_convomem_qa_groq_20260411_0001.json  results_convomem_qa_groq_20260411_0017.json  results_convomem_qa_groq_20260411_0032.json  results_convomem_qa_groq_fullpacket_syncctr_100.json  results_convomem_qa_groq_hits_only_300_20260411_0034.json  results_convomem_qa_groq_packet_full_300.json  results_convomem_raw_top10_20260409_1519.json  results_convomem_raw_top10_20260409_1532.json  (+13 more)
examples/: basic_mining.py  convo_import.py
experiments/: steering_os_commands.py
tests/: conftest.py  test_graph.py  test_memory_api.py  test_recall_packet.py  test_version_consistency.py
verimem/: __init__.py  __main__.py  background_nli.py  cli.py  fast_store.py  graph.py  hybrid_retrieval.py  memory.py  policy.py  recall.py  reranker.py  revision.py  version.py
