[project]
name = "verimem"
version = "5.0.0"
description = "VeriMem — local agent memory: Memory.remember/recall, structured ContextPacket, optional rerank, NLI, and entity graph. No API key required."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{name = "Vivek Rao"}]
keywords = [
    "ai", "memory", "llm", "rag", "chromadb",
    "vector-database", "embeddings", "agents",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Utilities",
]
dependencies = [
    "chromadb>=0.5.0,<0.7",
    "pyyaml>=6.0",
    "sentence-transformers>=2.7",
]

[project.urls]
Homepage = "https://github.com/itachi-hue/verimem"
Repository = "https://github.com/itachi-hue/verimem"
"Bug Tracker" = "https://github.com/itachi-hue/verimem/issues"

[project.scripts]
verimem = "verimem:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4.0"]
# Optimum 2.1+ is required for PyTorch 2.9+ (older optimum breaks on torch.onnx.symbolic_opset14).
# Speeds BackgroundNLI and the default rerank cross-encoder via ONNX Runtime (~3× on CPU, same weights).
nli = ["optimum[onnxruntime]>=2.1,<3"]
fast = ["usearch>=2.0"]
spellcheck = ["autocorrect>=2.0"]
groq = ["groq>=0.4.0"]
hindsight = ["hindsight-client>=0.4.0"]
# Convenience: ONNX speedups + FastStore (same deps as nli + fast).
all = ["optimum[onnxruntime]>=2.1,<3", "usearch>=2.0"]

[dependency-groups]
dev = ["pytest>=7.0", "ruff>=0.4.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["verimem"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"benchmarks/*" = ["E402"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
